Change backgorund color for first name inside ordered list

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <h2 id="favs">Favourite Fruits</h2>
     <ol>
-      <li>Raspberry</li>
+      <li id="first">Raspberry</li>
       <li>Blackberry</li>
       <li>Blueberry</li>
     </ol>
