--- a/index.html
+++ b/index.html
@@ -49,20 +49,20 @@
 
     <h2 id="types">Types of Simple Fruits</h2>
     <ul class="types">
-      <li>achene</li>
-      <li>capsule</li>
-      <li>caryopsis</li>
-      <li>Cypsela</li>
-      <li>fibrous drupe</li>
-      <li>follicle</li>
-      <li>legume</li>
-      <li>loment</li>
-      <li>nut</li>
-      <li>samara</li>
-      <li>schizocarp</li>
-      <li>silique</li>
-      <li>silicle</li>
-      <li>utricle</li>
+      <li class="odd">achene</li>
+      <li class="even">capsule</li>
+      <li class="odd">caryopsis</li>
+      <li class="even">Cypsela</li>
+      <li class="odd">fibrous drupe</li>
+      <li class="even">follicle</li>
+      <li class="odd">legume</li>
+      <li class="even">loment</li>
+      <li class="odd">nut</li>
+      <li class="even">samara</li>
+      <li class="odd">schizocarp</li>
+      <li class="even">silique</li>
+      <li class="odd">silicle</li>
+      <li class="even">utricle</li>
     </ul>
 
   </main>
