Add backgorund color to evey third line inside types

--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
     <ul class="types">
       <li class="odd">achene</li>
       <li class="even">capsule</li>
-      <li class="odd">caryopsis</li>
+      <li class="third">caryopsis</li>
       <li class="even">Cypsela</li>
       <li class="odd">fibrous drupe</li>
-      <li class="even">follicle</li>
+      <li class="third">follicle</li>
       <li class="odd">legume</li>
       <li class="even">loment</li>
-      <li class="odd">nut</li>
+      <li class="third">nut</li>
       <li class="even">samara</li>
       <li class="odd">schizocarp</li>
-      <li class="even">silique</li>
+      <li class="third">silique</li>
       <li class="odd">silicle</li>
       <li class="even">utricle</li>
     </ul>
